Commit: Banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-spring.application.name=treino
+spring.datasource.url=jdbc:postgresql://dpg-d08bmangi27c738deck0-a.oregon-postgres.render.com:5432/sprint_1as4
+spring.datasource.username=fernando
+spring.datasource.password=esrKQp7Clr5TQ2Q8q8KWezZGUm4MluWh
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/crudzinzin
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
